--- a/site/package.json
+++ b/site/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.3",
+    "@astrojs/react": "^4.2.3",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
+    "@sanity/astro": "^3.2.6",
     "astro": "^5.6.1"
   }
 }
