--- a/studio/package.json
+++ b/studio/package.json
@@ -25,7 +25,10 @@
     "@sanity/eslint-config-studio": "^5.0.2",
     "@types/react": "^18.0.25",
     "eslint": "^9.9.0",
-    "prettier": "^3.0.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "prettier": "^3.5.3",
     "typescript": "^5.1.6"
   },
   "prettier": {
