--- a/site/package.json
+++ b/site/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.3",
