--- a/studio/package.json
+++ b/studio/package.json
@@ -16,21 +16,23 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^2.2.6",
+    "@sanity/cli": "^3.88.2",
+    "@sanity/insert-menu": "^1.1.11",
+    "@sanity/vision": "^3.88.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "^2.36.6",
-    "styled-components": "^6.1.15"
+    "sanity": "^3.88.2",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^5.0.2",
-    "@types/react": "^18.0.25",
+    "@types/react": "^19.1.3",
     "eslint": "^9.9.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "prettier": "^3.5.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.8.3"
   },
   "prettier": {
     "semi": false,
